--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.ai.openai.base-url=https://pro.aiskt.com
 spring.ai.openai.api-key=sk-cIdH6QhdESK2QeS774B8Ac9543Ed44D9BcB0Bb21C925915e
 spring.ai.openai.chat.options.model=gpt-3.5-turbo
 spring.ai.openai.chat.options.temperature=0.7
+
+spring.data.mongodb.uri=mongodb://localhost:27017/ai_knowledge
